--- a/configs/Dataloaders/768x768/general768x768.yaml
+++ b/configs/Dataloaders/768x768/general768x768.yaml
@@ -1,15 +1,17 @@
 target: src.data.GeneralDataModule.GeneralDataModule
 params:
   dataset: src.data.GeneralDataset.GeneralAugmentedDataset
-  root_source: #TODO insert IAM path here
-  dataset_type : "IAM"
-  scale : 1.0
-  size : [768,768]
-  z_shape : [96,96]
-  modeParagraph : 0
-  in_channels : 1
-  TestRun : False
-  style_samples : True
-  remove_newline : False
-  persistent_workers : True
-  n_workers : 8
+  root_source: datasets/UNIFIED
+  dataset_type: "ARABIC"
+  dataset_type_val: "ARABIC"
+  dataset_type_test: "ARABIC"
+  scale: 1.0
+  size: [768, 768]
+  z_shape: [96, 96]
+  modeParagraph: 0
+  in_channels: 1
+  TestRun: False
+  style_samples: True
+  remove_newline: False
+  persistent_workers: False
+  n_workers: 0
